...
  TextEditingController passwordController = TextEditingController();
  var isShowPass = true.obs;
  var isLoading = false.obs;
  var client = http.Client();
  final Future<SharedPreferences> _prefs = SharedPreferences.getInstance();

  final GoogleSignIn _googleSignIn = GoogleSignIn(scopes: ['email']);

  Future<void> handleSignIn() async {
    try {
      GoogleSignInAccount? user = await _googleSignIn.signIn();

      if (user != null) {
...
  }

  Future<void> login() async {
    LoadingFullScreen.showLoading();
    try {
      var headers = {'Content-Type': 'application/json'};
      var url = Uri.parse("${ApiEndPoints.baseUrl}/auth/login");
      var body = {
        "email": emailController.text.trim().toString(),
        "password": passwordController.text.toString()
      };

      var response =
          await http.post(url, body: jsonEncode(body), headers: headers);
      final json = jsonDecode(response.body);
      if (response.statusCode == 200) {
...
          emailController.clear();
          passwordController.clear();

          CustomeSnackBar.showSuccessSnackTopBar(
              context: Get.context,
              title: "Success",
              message: "Đăng nhập thành công");
          Get.offAllNamed("/");
        } else {
          LoadingFullScreen.cancelLoading();
          CustomeSnackBar.showWarningTopBar(
              context: Get.context,
              title: "Error",
...
